# lazyevm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  config.rs  event.rs  keys.rs  main.rs  theme.rs  tui.rs
src/components/: mod.rs  sidebar.rs  status_bar.rs
src/panels/: anvil.rs  cast.rs  explorer.rs  forge.rs  mod.rs  wallets.rs
src/services/: anvil_manager.rs  cast_runner.rs  forge_runner.rs  keystore.rs  mod.rs  rpc_client.rs
