[package]
name = "lazyevm"
version = "0.1.0"
edition = "2021"
description = "A lazygit-style TUI for Foundry EVM development tools"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
strip-ansi-escapes = "0.2"
toml = "0.8"
dirs = "5"
